--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0E9CE8</color>
+    <color name="indicator">#673AB7</color>
+    <color name="gray">#404040</color>
 </resources>
