--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -21,32 +21,13 @@
             android:textSize="22sp"
             android:textStyle="bold" />
 
-<!--        <com.google.android.material.carousel.MaskableFrameLayout-->
-<!--            android:id="@+id/home_carousel"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="200dp"-->
-<!--            android:layout_marginStart="4dp"-->
-<!--            android:layout_marginEnd="4dp"-->
-<!--            android:foreground="?attr/selectableItemBackground"-->
-<!--            app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge"-->
-
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/tabLayout">-->
-<!--            <ImageView-->
-<!--                android:id="@+id/carousel_image_view"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:scaleType="centerCrop"-->
-<!--                android:src="@drawable/newstest"/>-->
-<!--        </com.google.android.material.carousel.MaskableFrameLayout>-->
-
-        <com.google.android.material.carousel.MaskableFrameLayout
-            android:id="@+id/home_carousel"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/carousel_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <include layout="@layout/list_item_for_top_headlines"/>
-        </com.google.android.material.carousel.MaskableFrameLayout>
+            android:layout_height="300dp"
+            app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
+            android:clipChildren="false"
+            android:clipToPadding="false" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -54,5 +35,4 @@
             android:layout_height="match_parent" />
 
     </LinearLayout>
-
 </androidx.core.widget.NestedScrollView>
