--- a/app/src/main/res/layout/list_item_for_top_headlines.xml
+++ b/app/src/main/res/layout/list_item_for_top_headlines.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.carousel.MaskableFrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:padding="5dp"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="1dp"
-    app:rippleColor="@android:color/transparent">
+    android:foreground="?attr/selectableItemBackground"
+    app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +30,6 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/newstest" />
 
-
         </com.google.android.material.card.MaterialCardView>
 
         <TextView
@@ -38,11 +37,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="70dp"
-            android:maxLines="3"
             android:padding="5dp"
             android:text="Title"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-</com.google.android.material.card.MaterialCardView>
+</com.google.android.material.carousel.MaskableFrameLayout>
